# Emio.API

./: .gitignore  LICENSE.txt  README.md  camera_example.py  emioapi.md  example.py  motors_example.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
emioapi/: __init__.py  __main__.py  _camerafeedwindow.py  _depthcamera.py  _emiomotorsparameters.py  _logging_config.py  _motorgroup.py  _positionestimation.py  camera_2d_points.csv  cameraparameter.json  emioapi.py  emiocamera.py  emiomotors.py  emiomotorsparameters.py  motorgroup.py  multiprocessemiocamera.py  pydoc-markdown.yml
emioapi/udp_bridge/: udp_bridge.py  udp_bridge_params.py
examples/: camera_example.py  example.py  motors_example.py  motors_multiturn.py  motors_pid_position.py  motors_pwm.py  multi_camera_example.py  multiprocess_camera_example.py
examples/matlab/: README.md  camera.py  launch_python.m  main.py  params.py  process_motor.py  requirements.txt  simulink_bridge.py  test.py  udp_bridge.py
examples/matlab/Jacobian/: jacobian.mat  jacobian.mlx  jacobian.slx  jacobian.slxc
examples/matlab/Jacobian/slprj/_jitprj/: s5OXR51N0MTCmAijgIvZlNE.l  s5OXR51N0MTCmAijgIvZlNE.mat
examples/matlab/Jacobian/slprj/_sfprj/EMLReport/: s5OXR51N0MTCmAijgIvZlNE.mat
examples/matlab/Jacobian/slprj/_sfprj/jacobian/: amsi_serial.mat
examples/matlab/Jacobian/slprj/_sfprj/precompile/: WlaHY7ixQkQaG2gOItdvbB.mat  Z9qj3XzcEpjWO87iNQKPFH.mat
examples/matlab/Jacobian/slprj/sim/varcache/jacobian/: checksumOfCache.mat  varInfo.mat
examples/matlab/Pendulum/State_Space/: state_space.mat  state_space.mlx  state_space.slx  state_space.slxc
examples/matlab/Pendulum/State_Space/slprj/_jitprj/: jitEngineAccessInfo.mat  s0QEhgbdD6HJO2ei765Y2LF.mat  s9g6eFMGM1yirYdsP9ROq3C.l  s9g6eFMGM1yirYdsP9ROq3C.mat  sYFmWlUFyskuHCmuNU8q8OB.l  sYFmWlUFyskuHCmuNU8q8OB.mat
examples/matlab/Pendulum/State_Space/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  s0QEhgbdD6HJO2ei765Y2LF.mat  s9g6eFMGM1yirYdsP9ROq3C.mat  (+1 more)
examples/matlab/Pendulum/Transfer_Function/: transfert_function.mat  transfert_function.mlx  transfert_function.slx  transfert_function.slxc
tests/: test_emioapi.py
(+19 files in other folders)
