[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emioapi"
version = "0.2.0"
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["pyserial", "dynamixel_sdk", "pyrealsense2"]
description = "An API for controlling  the motors of the EMIO robot."
keywords = ["roboticsc", "emio", "api"]
authors = [
    {name = "Compliance Robotics", email = "support@compliance-robotics.com"}
]

[project.urls]
Repository = "https://github.com/SofaComplianceRobotics/Emio.API"

