[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emioapi"
version = "0.2.0"
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["pyserial", "dynamixel_sdk", "pyrealsense2"]
description = "An API for controlling  the motors of the EMIO robot."
keywords = ["roboticsc", "emio", "api"]
authors = [
    {name = "Compliance Robotics", email = "support@compliance-robotics.com"}
]

[[tool.pydoc-markdown.loaders]]
type = python

[[tool.pydoc-markdown.processors.filter]]

[tool.pydoc-markdown.processors.filter]
type = filter
skip_empty_modules = true
exclude_private = true
expression = not name.startswith('_') and default()


[tool.pydoc-markdown.renderer]
type = markdown
filename = emioapi.md
descriptive_class_title = false
descriptive_module_title = false
insert_header_anchors = true
classdef_code_block = true
signature_code_block = true
signature_in_header = true
code_headers = false
use_fixed_header_levels = false
render_toc = false
toc_maxdepth = 4

[project.urls]
Repository = "https://github.com/SofaComplianceRobotics/Emio.API"

